--- a/pipeline_go.yml
+++ b/pipeline_go.yml
@@ -6,21 +6,19 @@ on:
   pull_request:
     branches: [ main, master ]
 
-env:
-  GO_VERSION: '1.23.6'
-  MAIN_PACKAGE_PATH: 'cmd/main.go'
+env: 
+	GO_VERSION: '1.23.6' 
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - uses: actions/checkout@v3
     - name: Set up Go
       uses: actions/setup-go@v3
-      with:
-        go-version: '1.23.6'
     - name: Build
-      run: go build -o bin/app ${{ env.MAIN_PACKAGE_PATH }}
+      run: go build -o bin/app main.go
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
